@@ -35,6 +35,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Made the PLURAL: parser function return singular on -1 per default.
 * Fixed up the AjaxSearch
 * (bugs 5051, 5376) Tooltips and accesskeys no longer require JavaScript
+* Added SkinTemplateOutputPageBeforeExec hook before SkinTemplate::outputPage()
+  starts page output (http://lists.wikimedia.org/pipermail/wikitech-l/2007-January/028554.html)
 
 == Languages updated ==
 
